# mock-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.test  README.md  alembic.ini  docker-compose.test.yaml  docker-compose.yaml  entrypoint.sh  makefile  pyproject.toml  test-entrypoint.sh
alembic/: env.py
alembic/versions/: bce7fbee8859_initial.py  d3335e6a9e22_change_currency_logic.py
src/: config.py  logger.py  main.py  repository.py  router.py  schemas.py  service.py  utils.py
src/database/: database.py  db_init.py  initial_currency_data.py  models.py
tests/: test_service.py
