[tool.poetry]
name = "mock-service"
version = "0.1.0"
description = ""
authors = ["wsdm <kuznetsov06denis@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
alembic = "^1.16.4"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
pydantic-xml = "^2.17.3"
requests = "^2.32.4"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
